ambient/050-ambient-and-sidecar/01-ns-create.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-discovery: enabled
    istio-injection: enabled
  name: travel-control-sidecar
spec: {}
