ambient/050-ambient-and-sidecar/03-travel-control-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control
  namespace: travel-control-sidecar
spec:
  selector:
    matchLabels:
      app: control
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
        proxy.istio.io/config: |
          proxyMetadata:
            ISTIO_META_ENABLE_HBONE: "true"
      labels:
        app: control
        version: v1
    spec:
      containers:
        - name: control
          image: quay.io/kiali/demo_travels_control:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: control
  namespace: travel-control-sidecar
  labels:
    app: control
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: control
