ambient/050-ambient-and-sidecar/04-travel-control-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: control-sidecar
  namespace: travel-control-sidecar
spec:
  to:
    kind: Service
    name: control
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
